feat: add 4 more tasks

--- a/tests/plus_minus_effect/plus_minus_effect_style.css
+++ b/tests/plus_minus_effect/plus_minus_effect_style.css
@@ -27,3 +27,23 @@
     display: none;
     color: red;
 }
+
+#box7-wrong-answer {
+    display: none;
+    color: red;
+}
+
+#box8-wrong-answer {
+    display: none;
+    color: red;
+}
+
+#box9-wrong-answer {
+    display: none;
+    color: red;
+}
+
+#box10-wrong-answer {
+    display: none;
+    color: red;
+}
